config/istio/Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: istio-system
---
kind: Namespace
apiVersion: v1
metadata:
  name: istio-cni
